@@ -32,7 +32,7 @@ if ($cb_status && $cb_smsid)
 	$smslog_id = $db_row['local_smslog_id'];
 	if ($smslog_id)
 	{
-		$data = getsmsoutgoing($smslog_id);
+		$data = sendsms_get_sms($smslog_id);
 		$uid = $data['uid'];
 		$c_sms_status = $data['p_status'];
 		switch ($cb_status)
