@@ -42,6 +42,7 @@ Version 0.9.9.2-beta6 - 131129
 - update interceptincomingsms() to recvsms_intercept()
 - update interceptsmstoinbox() to recvsms_inbox_add_intercept()
 - update insertsmstoinbox() to recvsms_inbox_add()
+- update getsmsoutgoing() to sendsms_get_sms()
 - remove lib init1 and init2, include them in function.php
 - remove lib/fn_csv.php and lib/fn_download.php, move them to lib/fn_core.php
 - remove lib/fn_gateway.php and lib/fn_lang.php, move them to lib/fn_core.php
